# video-rag-search

./: .gitignore  README.md  caption_video.py  graph.ipynb  initialize_db.py  main.py  pyproject.toml  query_model.py  vector-db.py  video-slicer.py  video_slicer.py
initialize-db/: caption_video.py  initialize_db.py  vector_db_utils.py
initialize_db_utils/: caption_video.py  vector_db.py
utils/: caption_video.py  vector_db.py
