[project]
name = "video-rag-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.7",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "openai>=1.76.2",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
]
